--- a/Corhort107/ResumeActivity/style.css
+++ b/Corhort107/ResumeActivity/style.css
@@ -12,6 +12,7 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
 #box1 {
   display: flex;
 }
@@ -53,7 +54,8 @@ ul li {
 /* section 2 starts here  */
 #section2 {
   display: flex;
-  gap: 5px; /*not really needed*/
+  gap: 5px;
+  /*not really needed*/
   width: 100%;
   height: 100vh;
 }
@@ -62,10 +64,12 @@ ul li {
   border: 1px solid aqua;
   flex: 70%;
 }
+
 #right_column {
   border: 1px solid lightcoral;
   flex: 30%;
 }
+
 .dropdown {
   position: relative;
   display: inline-block;
@@ -83,7 +87,7 @@ ul li {
   position: absolute;
   background-color: #333;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -117,35 +121,30 @@ ul li {
 }
 
 .progress {
-  background-color: cornflowerblue; /* Green color for the progress bar */
+  background-color: cornflowerblue;
+  /* Green color for the progress bar */
   height: 100%;
-  transition: width 0.5s; /* Smooth transition effect for width changes */
+  transition: width 0.5s;
+  /* Smooth transition effect for width changes */
 }
 
 /* Add styles for different percentage bars */
 .percentage-bar:nth-child(odd) .progress {
-  background-color: orangered; /* Different color for odd bars */
+  background-color: orangered;
+  /* Different color for odd bars */
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-
-}
+@media only screen and (max-width: 600px) {}
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-
-}
+@media only screen and (min-width: 600px) {}
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {}
 
-}
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 992px) {}
 
-}
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-
-}
+@media only screen and (min-width: 1200px) {}
