--- a/Corhort107/bootstrap-demo/style.css
+++ b/Corhort107/bootstrap-demo/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -18,7 +18,7 @@ body {
   background-color: #fff;
   padding: 12px;
   -webkit-box-shadow: 0px 0px 6px #ccc;
-          box-shadow: 0px 0px 6px #ccc;
+  box-shadow: 0px 0px 6px #ccc;
   height: 100%;
 }
 
@@ -36,7 +36,7 @@ body {
 .jsjhr .skfjh .jfheuf {
   background-color: #fff;
   -webkit-box-shadow: 0px 0px 6px #ccc;
-          box-shadow: 0px 0px 6px #ccc;
+  box-shadow: 0px 0px 6px #ccc;
   padding: 34px;
 }
 
@@ -49,7 +49,7 @@ body {
 .jsjhr .skfjh .box1 {
   background-color: #fff;
   -webkit-box-shadow: 0px 0px 6px #ccc;
-          box-shadow: 0px 0px 6px #ccc;
+  box-shadow: 0px 0px 6px #ccc;
   padding: 20px;
   margin-top: 20px;
 }
@@ -63,7 +63,7 @@ body {
 .jsjhr .skfjh .left_box {
   background-color: #fff;
   -webkit-box-shadow: 0px 0px 6px #ccc;
-          box-shadow: 0px 0px 6px #ccc;
+  box-shadow: 0px 0px 6px #ccc;
   padding: 34px;
 }
 
@@ -72,4 +72,36 @@ body {
   border-radius: 50%;
   height: 30px;
   margin-right: 10px;
+}
+
+/* Styles for the percentage bars */
+.percentage-bar {
+  margin-bottom: 20px;
+  ;
+}
+
+.label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.bar {
+  background-color: #eeeeee;
+  height: 20px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.percentage-bar:nth-child(even) .progress {
+  background-color: rgb(26, 86, 197);
+  /* Green color for the progress bar */
+  height: 100%;
+  transition: width 0.5s;
+  /* Smooth transition effect for width changes */
+}
+
+/* Add styles for different percentage bars */
+.percentage-bar:nth-child(odd) .progress {
+  background-color: rgb(0, 255, 64);
+  /* Different color for odd bars */
 }
